tket/src/snapshots/tket__resource__tests__2_qubits_add_const_rz.snap
---
source: tket/src/resource.rs
expression: info
---
Found 1 copyable values
Found 2 resource paths:
  - ResourceId(0):
    * H(Node(7)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(9)) [IncomingPort(0) -> OutgoingPort(0)]
    * Rz(Node(12)) [IncomingPort(0) -> OutgoingPort(0)]

  - ResourceId(1):
    * H(Node(8)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(9)) [IncomingPort(1) -> OutgoingPort(1)]
    * Rz(Node(13)) [IncomingPort(0) -> OutgoingPort(0)]
