tket/src/snapshots/tket__resource__tests__2_qubits_add_rz_add_const_rz.snap
---
source: tket/src/resource.rs
expression: info
---
Found 2 copyable values
Found 2 resource paths:
  - ResourceId(0):
    * H(Node(7)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(9)) [IncomingPort(0) -> OutgoingPort(0)]
    * Rz(Node(10)) [IncomingPort(0) -> OutgoingPort(0)]
    * Rz(Node(15)) [IncomingPort(0) -> OutgoingPort(0)]

  - ResourceId(1):
    * H(Node(8)) [IncomingPort(0) -> OutgoingPort(0)]
    * CX(Node(9)) [IncomingPort(1) -> OutgoingPort(1)]
    * Rz(Node(11)) [IncomingPort(0) -> OutgoingPort(0)]
    * Rz(Node(16)) [IncomingPort(0) -> OutgoingPort(0)]
